[package]
name = "petunia"
version = "2024.9.11"
edition = "2021"
description = "a collections of communication protocols."

[dependencies]
futures = "0.3"
log = "0.4"
openssl = "0.10"
r2d2 = "0.8"
zmq = "0.10"
paho-mqtt = "0.12"
tonic-health = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"
lazy_static = "1"
data-encoding = "2"
flexbuffers = "2"
lapin = "2"
opensearch = "2"
percent-encoding = "2"
amq-protocol-uri = "7"
jsonwebtoken = "9"

[dependencies.chrono]
version = "0.4"
features = ["serde", "std"]

[dependencies.rand]
version = "0.8"
features = ["small_rng"]

[dependencies.tonic]
version = "0.12"
features = ["transport", "tls"]

[dependencies.redis]
version = "0.27"
features = ["cluster", "r2d2"]

[dependencies.nix]
version = "0.29"
features = ["process", "user"]

[dependencies.hyper]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[dependencies.actix-web]
version = "4"
features = ["cookies"]

[build-dependencies]
tonic-build = "0.12"
