[package]
name = "petunia"
version = "2024.9.11"
edition = "2021"
description = "a collections of communication protocols."
homepage = "https://github.com/saturn-xiv/palm"
license = "MIT"

[dependencies]
futures = "0.3"
language-tags = "0.3"
mime = "0.3"
log = "0.4"
bs58 = "0.5"
actix-files = "0.6"
r2d2 = "0.8"
toml = "0.8"
zmq = "0.10"
askama = "0.12"
paho-mqtt = "0.12"
tonic-health = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"
byteorder = "1"
eui48 = "1"
lazy_static = "1"
serde_json = "1"
data-encoding = "2"
flexbuffers = "2"
ipnet = "2"
lapin = "2"
opensearch = "2"
percent-encoding = "2"
url = "2"
tempfile = "3"
google-youtube3 = "5"
amq-protocol-uri = "7"
jsonwebtoken = "9"

[dependencies.chrono]
version = "0.4"
features = ["serde", "std"]

[dependencies.rand]
version = "0.8"
features = ["small_rng"]

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dependencies.tonic]
version = "0.12"
features = ["transport", "tls"]

[dependencies.juniper]
version = "0.16"
features = ["chrono"]

[dependencies.validator]
version = "0.18"
features = ["derive"]

[dependencies.strum]
version = "0.26"
features = ["derive"]

[dependencies.redis]
version = "0.27"
features = ["cluster", "r2d2"]

[dependencies.nix]
version = "0.29"
features = ["process", "hostname", "user"]

[dependencies.hyper]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.casbin]
version = "2"
features = ["watcher"]

[dependencies.diesel]
version = "2"
default-features = false
features = ["postgres", "mysql", "sqlite", "r2d2"]

[dependencies.actix-web]
version = "4"
features = ["cookies"]

[dependencies.minio]
git = "https://github.com/minio/minio-rs.git"
rev = "b254b2f"

[dependencies.openssl]
version = "*"
features = ["vendored"]

[build-dependencies]
tonic-build = "0.12"
