[package]
name = "wisteria"
version = "2024.10.21"
edition = "2021"
description = "An online survey tool to quickly create questionnaires, poll votes & surveys."

[dependencies]
language-tags = "0.3"
log = "0.4"
askama = "0.12"
casbin = "2"
data-encoding = "2"
flexbuffers = "2"

[dependencies.chrono]
version = "0.4"
features = ["serde", "std"]

[dependencies.juniper]
version = "0.16"
features = ["chrono"]

[dependencies.validator]
version = "0.18"
features = ["derive"]

[dependencies.strum]
version = "0.26"
features = ["derive"]

[dependencies.hyper]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[dependencies.diesel]
version = "2"
default-features = false
features = ["postgres", "extras", "128-column-tables"]

[dependencies.actix-web]
version = "4"
features = ["cookies"]

[dependencies.petunia]
path = '../petunia'

[dependencies.daffodil]
path = '../daffodil'
